--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 
 sfg.brewery.apiHost=http://localhost:8080
+
+sfg.maxtotalconnections=100
+sfg.defaulttotalconnections=20
+sfg.connectiontimeout=3000
+sfg.sockettimeout=3000
+
 logging.level.org.apache.http=debug
